[tool.poetry]
name = "lfract"
version = "1.0.0rc1"
description = "An open-source CLI software for generating fractal images using the L-System."
authors = ["Surasith Boonaneksap <surasith.boo@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.scripts]
lfract = 'src.lfract:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
